syntax = "proto3";

option java_package = "com.ydanneg.erply.datastore";
option java_multiple_files = true;

enum DarkThemeConfigProto {
  DARK_THEME_CONFIG_UNSPECIFIED = 0;
  DARK_THEME_CONFIG_FOLLOW_SYSTEM = 1;
  DARK_THEME_CONFIG_LIGHT = 2;
  DARK_THEME_CONFIG_DARK = 3;
}

message UserPreferencesProto {
  DarkThemeConfigProto dark_theme_config = 1;
  // sync prefs per client
  map<string, int64> groups_last_sync_timestamp = 2;
  map<string, int64> products_last_sync_timestamp = 3;
  map<string, int64> images_last_sync_timestamp = 4;
}
